plugins {
    alias(libs.plugins.shadow)
    id 'application'
    id 'java'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation libs.gson
    implementation libs.imageio.webp
    implementation libs.imgscalr
    implementation libs.jave
    implementation libs.bundles.logback
    implementation libs.telegram.bot.api
    implementation libs.tika

    testImplementation libs.hamcrest
    testImplementation libs.junit
    testImplementation libs.mockwebserver
}

group = 'com.github.stickerifier'
version = '1.0'
description = 'Telegram bot to convert medias in the format required to be used as Telegram stickers'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(20)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += '--enable-preview'
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}

application {
    mainClass = 'com.github.stickerifier.stickerify.runner.Main'
    applicationDefaultJvmArgs = ['--enable-preview']
}

shadowJar {
    archiveBaseName.set('Stickerify')
    archiveClassifier.set('shadow')
    archiveVersion.set('')
}
